# python-titan-aerosols

./: .gitignore  .travis.yml  .zenodo.json  LICENSE.md  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: actions.yml  release.yml
aerosols/: .zenodo.json  __init__.py  bhmie.py  cli.py  fractals.py  mie.py  optical_index.py  tholins.py  tholins_CVD.py  tomasko_2008.py  version.py
aerosols/data/: LICENSE.md  README.md  optical_index.db
examples/: Tholins_examples.ipynb
tests/: requirements.txt  test_aerosols.py  test_cli.py  test_fractals.py  test_mie.py  test_tholins.py  test_tholins_CVD.py
