[metadata]
name = aerosols-scattering
author = Benoit Seignovert
author-email = python@seignovert.fr
summary = Python package for Titan''s aerosols scattering
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = http://github.com/seignovert/python-aerosols-scattering
license = MIT
keywords = NASA, Seti, Ring-node, API
classifier = 
    Development Status :: 3 - Alpha
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Visualization

[files]
packages =
    aerosols

[wheel]
universal = 1

[tool:pytest]
addopts = -vv --cov-report term-missing --cov-report html --cov-report xml

[entry_points]
console_scripts =
    fractal_tholins = aerosols.cli:cli_fractal_tholins
